edit explore and openapi
