# backend/src/feature/profile/routes/profile.routes.ts
@@ -1,12 +1,8 @@
 import { Router } from "express";
 import { profileService } from "../../../dependencies";
 import { handleRequest } from "../../../utils/handle-request";
-import { ProfileId } from "@CommonTypes/profile.type";
-import {
-  exploreRequestDTO,
-  profileRequestDTO,
-  ProfileResponseDTO,
-} from "../dto/profile.dto";
+import { ProfileId, Username } from "@CommonTypes/profile.type";
+import { profileRequestDTO, ProfileResponseDTO } from "../dto/profile.dto";
 import { parse } from "path";
 import { authMiddleware } from "middlewares/auth.middleware";
 import { ApiSuccess } from "@utils/http-response";
@@ -17,14 +13,24 @@ export const profileRoutes = Router();
 profileRoutes.use(authMiddleware);
 
 profileRoutes.get("/", (req, res) => {
-  handleRequest(res, async () => {
-    const profileId: ProfileId = Number(req.subject) as ProfileId;
+  const username = req.query.username;
+  if (username) {
+    handleRequest(res, async () => {
+      const result: ProfileResponseDTO = await profileService.getExploreProfile(
+        username as Username
+      );
+      return new ApiSuccess(result);
+    });
+  } else {
+    handleRequest(res, async () => {
+      const profileId: ProfileId = Number(req.subject) as ProfileId;
 
-    const result: ProfileResponseDTO = await profileService.getUserProfile(
-      profileId
-    );
-    return new ApiSuccess(result);
-  });
+      const result: ProfileResponseDTO = await profileService.getUserProfile(
+        profileId
+      );
+      return new ApiSuccess(result);
+    });
+  }
 });
 
 profileRoutes.put("/", (req, res) => {
@@ -35,14 +41,5 @@ profileRoutes.put("/", (req, res) => {
       profileId
     );
     return new ApiSuccess(strings.UPDAT_PROFILE_SUCCESSFUL);
-  });
-});
-
-profileRoutes.get("/explore", (req, res) => {
-  handleRequest(res, async () => {
-    const result: ProfileResponseDTO = await profileService.getExploreProfile(
-      exploreRequestDTO.parse(req.body)
-    );
-    return new ApiSuccess(result);
   });
 });
